# context-engine

./: .gitignore  CHANGELOG.md  PUBLISH.md  README.md  ROADMAP.md  SETUP.md  SKILL.md  VISION.md
config/: mood.json
libs/python/: README.md  pyproject.toml
libs/python/examples/: basic.py
libs/python/src/acontext/: __init__.py  handoff.py  journals.py  langchain.py  meta.py  narratives.py  profile.py  types.py
libs/python/tests/: conftest.py  test_handoff.py  test_journals.py  test_narratives.py  test_profile.py
memory/: ADAPTATIONS.md  GOALS.md  JOURNAL.md  META.json  META.md  NARRATIVES.md  PROFILE.md  REFLECTIONS.md  adaptations.json  goals.json  profile.json  reflections.json
memory/journals/: codex.md  hermes.md
references/: AGENTS.md.example  architecture.md  competitive-landscape.md  compression.md  ecosystem-analysis.md  multi-agent.md  philosophical-tensions.md  philosophy.md  psychology.md  qa-report.md  retrospective.md  ux-review.md
spec/: context-spec-v1.md
sub/: atmosphere-regulator.md  bootstrap.md  feedback.md  git-sync.md  handoff.md  narrative-memory.md  proactive-trigger.md  user-context-scanner.md  value-aware-guard.md
