[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "acontext"
version = "0.1.0"
description = "AContext — file-based, user-owned, cross-platform context layer for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
langchain = ["langchain>=0.1.0"]

[project.urls]
Homepage = "https://github.com/zhaoguoqiang-hub/acontext-py"
Repository = "https://github.com/zhaoguoqiang-hub/acontext-py"

[tool.setuptools.packages.find]
where = ["src"]
